VSE preview allows preview of channel (-5) #43646

Closed
opened 2015-02-13 01:40:10 +01:00 by Aaron Carlisle · 14 comments
Member

System Information
Windows 8.0
Intel HD Graphics

Blender Version
Broken: Blender 2.73.6
Worked: (optional)

Short description of error

VSE preview allows preview of channel (-5)
This should be limited to 0

Capture2.JPG
Exact steps for others to reproduce the error
change the preview to channel (-5)

**System Information** Windows 8.0 Intel HD Graphics **Blender Version** Broken: Blender 2.73.6 Worked: (optional) **Short description of error** VSE preview allows preview of channel (-5) This should be limited to 0 ![Capture2.JPG](https://archive.blender.org/developer/F143073/Capture2.JPG) **Exact steps for others to reproduce the error** change the preview to channel (-5)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by e652f781a3

This issue was referenced by e652f781a33b3b31fa95b543bf4003ff7b0c57d6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit e652f781a3.

Closed by commit e652f781a3.
Member

Added subscribers: @JulianEisel, @schlaile

Added subscribers: @JulianEisel, @schlaile
Member

this is actually a feature (added by Brecht long ago):

  • if you tab into metastrip(s), you can show the output of the sequencer of the timelines, which include the metastrip

That comes very handy, if you try to align strips within a meta to strips, that are not grouped into the meta.

So: please revert (or do the same in a more logical / user friendly way :) ).

Regards,
Peter

this is actually a feature (added by Brecht long ago): * if you tab into metastrip(s), you can show the output of the sequencer of the timelines, which include the metastrip That comes very handy, if you try to align strips within a meta to strips, that are not grouped into the meta. So: please revert (or do the same in a more logical / user friendly way :) ). Regards, Peter

This issue was referenced by ef2f31028e

This issue was referenced by ef2f31028edefde733c07df80c8a356cdcfa1423
Member

@schlaile, reverted! Thanks for notifying :)

@schlaile, reverted! Thanks for notifying :)
Member

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'
Julian Eisel self-assigned this 2015-02-13 14:01:03 +01:00
Author
Member

schlaile Can you give a .blend file or picture. I am trying to find the purpose in this so I can document it. And can seem to find the what you mean in your comment

schlaile Can you give a .blend file or picture. I am trying to find the purpose in this so I can document it. And can seem to find the what you mean in your comment
Member

@Blendify :

It isn't hard to get the picture (even without a picture :) ):

  • Open Blender, change to VSE
  • Add two color strips in channel 1 and 2, both starting at frame 1
  • Change strip color on channel 1 to red and channel 2 to green
  • Create a metastrip that only contains the red strip
    • Note: in some version of blender, you have to use two strips to make a meta, so just add another red strip after the first one and you should be done
  • Tab into the meta on channel 1

You should see a red output screen (no surprise).

If you change the channel tuner to "-1" you will see the green strip from one layer above.

Use case:

  • suppose, the color strips are video tracks and you want to align tracks within a meta strip to a track outside of the meta strip
@Blendify : It isn't hard to get the picture (even without a picture :) ): * Open Blender, change to VSE * Add two color strips in channel 1 and 2, both starting at frame 1 * Change strip color on channel 1 to red and channel 2 to green * Create a metastrip that only contains the red strip * Note: in some version of blender, you have to use two strips to make a meta, so just add another red strip after the first one and you should be done * Tab into the meta on channel 1 You should see a red output screen (no surprise). If you change the channel tuner to "-1" you will see the green strip from one layer above. Use case: * suppose, the color strips are video tracks and you want to align tracks **within** a meta strip to a track **outside** of the meta strip
Author
Member

@schlaile I followed those steps and nothing happened, see the video:

0001-1000.avi

@schlaile I followed those steps and nothing happened, see the video: [0001-1000.avi](https://archive.blender.org/developer/F281936/0001-1000.avi)
Member

@Blendify: which comes to no surprise, since you didn't follow my instructions carefully enough.

It is important to Meta the strip on channel 1 not channel 2.

Otherwise, the output of the inner meta strip is identical to the main timeline...

@Blendify: which comes to no surprise, since you didn't follow my instructions carefully enough. It is **important** to Meta the strip on channel **1** not channel **2**. Otherwise, the output of the inner meta strip is identical to the main timeline...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43646
No description provided.