Fix T43646: VSE preview allows displaying channels down to -5

Maybe just another typo (tm). (Checked with @psy-fi)